# Fastest_Image_Pattern_Matching

MatchTool/: MatchTool.rc  MatchTool.vcxproj  MatchToolDlg.cpp  MatchToolDlg.h  resource.h
py_matcher/: CMakeLists.txt
py_matcher/src/core/: match_types.h  match_utils.h  template_matcher.cpp  template_matcher.h
py_matcher/src/python/: cvmatcher.cp311-win_amd64.pyd  match_example.py  matcher_wrapper.cpp
